--- a/tpmlwebref_questionsearchnew1.htm
+++ b/tpmlwebref_questionsearchnew1.htm
@@ -179,7 +179,7 @@
                                                             <label>序號</label>
                                                         </div>
                                                         <div class="labelEffect">
-                                                            <input name="" type="text" value="2024/5/13下午18:09">
+                                                            <input name="" type="text" value="2024-05-13下午18:09">
                                                             <label>提問時間</label>
                                                         </div>
                                                     </div>
@@ -197,9 +197,9 @@
                                                             <label>問題處理階段</label>
                                                         </div>
                                                         <div class="labelEffect">
-                                                            <input name="" type="text" value="2天2小時33分" disabled
+                                                            <input name="" type="text" value="已超過2天2小時33分" disabled
                                                                 style="color: red;">
-                                                            <label>回覆期限</label>
+                                                            <label>回覆日期/期限</label>
                                                         </div>
                                                     </div>
                                                     <div class="form_grp" style="margin-bottom:50px;">
