--- a/tpmlwebref_questionsearch.htm
+++ b/tpmlwebref_questionsearch.htm
@@ -372,7 +372,7 @@
                                                 <td>應用科學</td>
                                                 <td><span class="blue">送陳</span></td>
                                                 <td><span class="gray">不予處理</span></td>
-                                                <td><time>1天2小時30分鐘</time></td>
+                                                <td><time>1天2小時30分</time></td>
                                                 <td>
                                                     <div class="btn_grp">
                                                         <a href="tpmlwebref_questionsearchnew.htm" class="btn"><i
