--- a/tpmlwebref_questionsearch.htm
+++ b/tpmlwebref_questionsearch.htm
@@ -448,8 +448,7 @@
                                                 <td>應用科學</td>
                                                 <td><span class="blue">送陳</span></td>
                                                 <td><span class="orange">部分解答</span></td>
-                                                <td><time>2024-05-13
-                                                        <br>16:09</time></td>
+                                                <td><time><span style="color: red;">已超過<br>2天2小時33分</span></time></td>
                                                 <td>
                                                     <div class="btn_grp">
                                                         <a href="tpmlwebref_questionsearchnew.htm" class="btn"><i
