--- a/tpmlwebref_questionsearchnew1.htm
+++ b/tpmlwebref_questionsearchnew1.htm
@@ -197,7 +197,7 @@
                                                             <label>問題處理階段</label>
                                                         </div>
                                                         <div class="labelEffect">
-                                                            <input name="" type="text" value="已超過2天2小時33分" disabled
+                                                            <input name="" type="text" value="已過2天2小時33分" disabled
                                                                 style="color: red;">
                                                             <label>回覆日期/期限</label>
                                                         </div>
