--- a/tpmlwebref_questionsearch.htm
+++ b/tpmlwebref_questionsearch.htm
@@ -265,15 +265,16 @@
                                     <ul>
                                         <li class="active"><a href="#">全部</a></li>
                                         <li><a href="#">未回覆</a></li>
-                                        <li><a href="#">已回覆(結案)</a></li>
                                         <li><a href="#">處理中</a></li>
                                         <li><a href="#">送陳</a></li>
+                                        <li><a href="#">已回覆(結案)</a></li>
                                         <li><a href="#">退文</a></li>
                                     </ul>
                                     <br>
                                     處理方式：
                                     <ul>
                                         <li class="active"><a href="#">全部</a></li>
+                                        <li><a href="#">尚未回覆</a></li>
                                         <li><a href="#">不予處理</a></li>
                                         <li><a href="#">完全解答</a></li>
                                         <li><a href="#">部份解答</a></li>
@@ -491,7 +492,7 @@
                                                         有數筆出版年為19xx之清單，請問：新書通報之「新書」定義為何？ 謝謝</a>
                                                 </td>
                                                 <td>應用科學</td>
-                                                <td><span class="red">退文</span></td>
+                                                <td><span class="orange">退文</span></td>
                                                 <td><span class="gray">不予處理</span></td>
                                                 <td><time>2024-05-13
                                                         <br> 16:09</time></td>
@@ -514,8 +515,8 @@
                                                         謝謝!</a>
                                                 </td>
                                                 <td>應用科學</td>
-                                                <td><span class="red">退文</span></td>
-                                                <td><span class="gray">不予處理</span></td>
+                                                <td><span class="orange">退文</span></td>
+                                                <td><span class="red">尚未回覆</span></td>
                                                 <td><time>2024/5/14
                                                         <br> 16:09</time></td>
                                                 <td>
