--- a/tpmlwebref_questionsearchnew1.htm
+++ b/tpmlwebref_questionsearchnew1.htm
@@ -510,7 +510,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <!--tabcontent 2-->
+                                   <!--tabcontent 2-->
                                     <div>
                                         <div class="content__wrapper">
                                             <div class="_head">
@@ -536,6 +536,12 @@
                                                 </div>
                                                 <div class="form_grp" style="margin-top: 20px;">
                                                     <div class="form_title">讀者姓名<abbr>*</abbr></div>
+                                                    <div class="form_content">
+                                                        <input type="text" name="usr_name" id="usr_name" />
+                                                    </div>
+                                                </div>
+                                                <div class="form_grp" style="margin-top: 20px;">
+                                                    <div class="form_title">讀者類型</div>
                                                     <div class="form_content">
                                                         <input type="text" name="usr_name" id="usr_name" />
                                                     </div>
