--- a/tpmlwebref_statistics.htm
+++ b/tpmlwebref_statistics.htm
@@ -153,7 +153,7 @@
                                                 <div class="form_grp form_inline">
                                                     <div class="labelEffect">
                                                         <select id="functionSelect">
-                                                            <option value="" selected disabled>請選擇</option>
+                                                            <option value="" selected disabled>請選擇功能選項</option>
                                                             <option value="1">每年件數</option>
                                                             <option value="2">每月件數</option>
                                                             <option value="3">回覆天數</option>
