--- a/tpmlwebref_statistics.htm
+++ b/tpmlwebref_statistics.htm
@@ -641,7 +641,10 @@
                 });
             });
         </script>
-
+        <script>
+            $('header').load("header.htm");
+            $('aside').load("aside_tpml.htm");
+        </script>
 
     </body>
 
