--- a/tpmlwebref_reviewedit.htm
+++ b/tpmlwebref_reviewedit.htm
@@ -368,9 +368,10 @@
                     });
                 }
             </script>
-            <script>
-                $('header').load("header.htm");
-            </script>
+        <script>
+            $('header').load("header.htm");
+            $('aside').load("aside_tpml.htm");
+        </script>
 </body>
 
 </html>
