--- a/tpmlwebref_referralsedit.htm
+++ b/tpmlwebref_referralsedit.htm
@@ -260,8 +260,9 @@
                 });
             }
         </script>
-        <script>
+             <script>
             $('header').load("header.htm");
+            $('aside').load("aside_tpml.htm");
         </script>
 </body>
 
