--- a/tpmlwebref_questionsearchnew1.htm
+++ b/tpmlwebref_questionsearchnew1.htm
@@ -686,7 +686,10 @@
             hiddenLink.click();
         });
     </script>
-
+        <script>
+            $('header').load("header.htm");
+            $('aside').load("aside_tpml.htm");
+        </script>
 </body>
 
 </html>
