--- a/tpmlwebref_questionsearchnew.htm
+++ b/tpmlwebref_questionsearchnew.htm
@@ -771,7 +771,10 @@
             hiddenLink.click();
         });
     </script>
-
+        <script>
+            $('header').load("header.htm");
+            $('aside').load("aside_tpml.htm");
+        </script>
 </body>
 
 </html>
