--- a/tpmlwebref_chat_customer.htm
+++ b/tpmlwebref_chat_customer.htm
@@ -420,10 +420,10 @@
     <script src="vendor/highlight/highlight.pack.js"></script>
     <!-- tree view -->
     <script src="vendor/treeview/jquery.treeview.js"></script>
-    <script>
-        // first example
-        $('header').load("header.htm");
-    </script>
+           <script>
+            $('header').load("header.htm");
+            $('aside').load("aside_tpml.htm");
+        </script>
 </body>
 
 </html>
