--- a/tpmlwebref_chatmessage_1.htm
+++ b/tpmlwebref_chatmessage_1.htm
@@ -193,10 +193,9 @@
         <script src="vendor/treeview/jquery.treeview.js"></script>
         <!-- fancybox -->
         <script src="vendor/fancybox/jquery.fancybox.min.js"></script>
-        <script>
-            // first example
-            $(".treeview .treeview").treeview();
+              <script>
             $('header').load("header.htm");
+            $('aside').load("aside_tpml.htm");
         </script>
 </body>
 
