--- a/tpmlwebref_chat_customer_add.htm
+++ b/tpmlwebref_chat_customer_add.htm
@@ -357,6 +357,10 @@
             $("#select3").select2();
         });
     </script>
+            <script>
+            $('header').load("header.htm");
+            $('aside').load("aside_tpml.htm");
+        </script>
 </body>
 
 </html>
