--- a/tpmlwebref_chat_customer_add2.htm
+++ b/tpmlwebref_chat_customer_add2.htm
@@ -447,6 +447,10 @@
             $('header').load("header.htm");
             $('aside').load("aside_tpml.htm");
         </script>
+            <script>
+            $('header').load("header.htm");
+            $('aside').load("aside_tpml.htm");
+        </script>
 </body>
 
 </html>
